<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtTitleDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:text="@string/detail"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        android:fontFamily="sans-serif" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8sdp"
        android:weightSum="3">

        <LinearLayout
            android:layout_weight="1"
            android:id="@+id/lnTemperature"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:orientation="vertical"
            android:background="@drawable/bg_weather_detail_big">
            <ImageView
                android:id="@+id/imgTemperature"
                android:src="@drawable/ic_weather_detail_temperature"
                android:layout_margin="@dimen/_5sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/txtTemperatureTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:textSize="@dimen/_12ssp"
                android:text="@string/fell_like"/>
            <TextView
                android:id="@+id/txtTemperature"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="30°C"
                android:textSize="@dimen/_20ssp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:id="@+id/lnHumidity"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_marginStart="@dimen/_8sdp"
            android:orientation="vertical"
            android:background="@drawable/bg_weather_detail_big">
            <ImageView
                android:id="@+id/imgHumidity"
                android:src="@drawable/ic_weather_detail_humidity"
                android:layout_margin="@dimen/_5sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/txtHumidityTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:textSize="@dimen/_12ssp"
                android:text="@string/humidity"/>
            <TextView
                android:id="@+id/txtHumidity"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="90%"
                android:textSize="@dimen/_20ssp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:id="@+id/lnUVIndex"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_8sdp"
            android:orientation="vertical"
            android:background="@drawable/bg_weather_detail_big">
            <ImageView
                android:id="@+id/imgUVIndex"
                android:src="@drawable/ic_weather_detail_uv_index"
                android:layout_margin="@dimen/_5sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/txtUVIndexTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:textSize="@dimen/_12ssp"
                android:text="@string/uv_index"/>
            <TextView
                android:id="@+id/txtUVIndex"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="0"
                android:textSize="@dimen/_20ssp"/>
        </LinearLayout>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:weightSum="3">

        <LinearLayout
            android:layout_weight="1"
            android:id="@+id/lnVision"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:orientation="vertical"
            android:background="@drawable/bg_weather_detail_big">
            <ImageView
                android:id="@+id/imgVision"
                android:src="@drawable/ic_weather_detail_vision"
                android:layout_margin="@dimen/_5sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/txtVisionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:textSize="@dimen/_12ssp"
                android:text="@string/vision"/>
            <TextView
                android:id="@+id/txtVision"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="30 km"
                android:textSize="@dimen/_20ssp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:id="@+id/lnDewPoint"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_marginStart="@dimen/_8sdp"
            android:orientation="vertical"
            android:background="@drawable/bg_weather_detail_big">
            <ImageView
                android:id="@+id/imgDewPoint"
                android:src="@drawable/ic_weather_detail_dew_point"
                android:layout_margin="@dimen/_5sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/txtDewPointTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:textSize="@dimen/_12ssp"
                android:text="@string/dewpoint"/>
            <TextView
                android:id="@+id/txtDewPoint"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="27°C"
                android:textSize="@dimen/_20ssp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:id="@+id/lnAirPressure"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_8sdp"
            android:orientation="vertical"
            android:background="@drawable/bg_weather_detail_big">

            <ImageView
                android:id="@+id/imgPressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:src="@drawable/ic_weather_detail_air_pressure" />

            <TextView
                android:id="@+id/txtPressureTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:textSize="@dimen/_12ssp"
                android:text="@string/pressure"/>
            <TextView
                android:id="@+id/txtPressure"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="1024 mb"
                android:textSize="@dimen/_18ssp"/>
        </LinearLayout>
    </TableRow>


</LinearLayout>